# python-ooodev-cli-hlp

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml  startup.sh
.devcontainer/root/: bashrc.sh  bashrc_custom.sh
project/builder/: build_pkg.py
project/controllers/: controller_inv.py
project/data/: README.md
project/dl/: download.py
project/parse/: parse_inv.py
sphinx_cli_help/: README.md  config.json
sphinx_cli_help/cfg/: __init__.py  config.py
sphinx_cli_help/cli/: hlp.py  interactive_hlp.py
sphinx_cli_help/data_class/: __init__.py  inventory.py  sphinx_info.py
sphinx_cli_help/data_manage/controller/: database_controller.py
sphinx_cli_help/data_manage/db_class/: base_sql.py  base_sql_table.py  db_connect.py  init_db.py  sql_ctx.py  tbl_inventory.py  tbl_sphinx_info.py
sphinx_cli_help/data_manage/qry/: qry_inv.py
sphinx_cli_help/web_search/: __init__.py  browse.py
